<?xml version="1.0"?>
<package format="2">
  <name>kbot_serial</name>
  <version>1.0.1</version>
  <description>
    KBOT SERIAL: Using rosserial communication between ras-pi and esp32
  </description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
